<resources>
    <string name="app_name">Step12ShardPref</string>
    <string name="action_settings">Settings</string>    <!-- 문자열에 이름을 붙이고 내용을 적는다. => res로 관리하는 이유: 다국어 지원을 위해-->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_start">시작</string>
    <string name="title_activity_finish">종료</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
<!--빨간줄이 뜨는 이유는 다국어로 양쪽에서 정의가 되어 있어야 하는데 한쪽에만 있어서 뜨는 것이다. 오류는 아님.-->